--- a/css/style.css
+++ b/css/style.css
@@ -146,11 +146,10 @@ a, a:hover{
 	text-align: center;
 }
 .who-we-are .title h2{
-	font-size: 24px;
-    line-height: 34px;
-    text-transform: uppercase;
-    font-weight: 700;
-    letter-spacing: 2px;
+	font-size: 28px;
+    line-height: 38px;
+    font-weight: 800 !important;
+    letter-spacing: 1px;
     color: #506a85;
     margin: 55px 0px 10px; 
 }
