--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ a, a:hover{
 	text-decoration: none;
 }
 /*  REEN home page code start  */
-
 /*Header-top-section goes here*/
 .header-section{
 	width: 100%;
@@ -132,7 +131,7 @@ a, a:hover{
 }
 .slider .carousel-caption .btn-info:hover, .slider .carousel-caption .btn-info:focus{
 	background: transparent !important;
-    color: #fff !important;
+    color: #00bc9c !important;
     border: 1px solid #00bc9c !important;
     outline: 0px;
     box-shadow: none;
@@ -180,4 +179,219 @@ a, a:hover{
 	color: #73879c;
 	margin-bottom: 55px;
 }
+/*works section goes here*/
+.works{
+	width: 100%;
+	padding: 80px 0px 70px;
+	background: #f2f5f7;
+}
+.works .title{
+	width: 100%;
+	padding-bottom: 40px;
+	text-align: center; 
+}
+.works .title h2{
+	font-size: 30px;
+    line-height: 40px;
+    font-weight: 1200 !important;
+    letter-spacing: 1px;
+    color: #506a85;
+    margin: 0px 0px 10px; 
+}
+.works .title p{
+	font-size: 16px;
+	line-height: 26px;
+	font-weight: 400;
+	color: #73879c;
+}
+.works .card{
+	width: 100%;
+	text-align: center;
+	border: 0px;
+    border-radius: 0px;
+}
+.works .card-img, .card-img-top {
+	border-radius: 0px !important;
+}
+.works .card .card-title{
+	font-size: 18px;
+	font-weight: 500;
+	color: #506a85;
+	margin-bottom: 5px;
+}
+.works .card .card-text{
+	font-size: 14px;
+	font-weight: 500;
+	color: #9ca9b7;
+}
+.works .owl-carousel{
+	margin-top: 70px;
+}
+.works .owl-theme .owl-dots .owl-dot span{
+	background: #506a85;
+}
+.works .owl-theme .owl-nav.disabled+.owl-dots {
+    margin-top: 25px;
+}
+.works .owl-theme .owl-dots .owl-dot.active span, .works .owl-theme .owl-dots .owl-dot:hover span {
+    background: #13c0a3;
+}
+.works .owl-theme .owl-dots .owl-dot:focus{
+	outline: none !important;
+}
+/*Get in touch starts here*/
+.get-in-touch{
+	width: 100%;
+	padding: 80px 0px;
+	text-align: center;
+}
+.get-in-touch .title{
 
+}
+.get-in-touch .title h2{
+	font-size: 30px;
+    line-height: 40px;
+    font-weight: 1200 !important;
+    letter-spacing: 1px;
+    color: #506a85;
+    margin: 0px 0px 20px; 
+}
+.get-in-touch .title p{
+	font-size: 16px;
+	line-height: 26px;
+	font-weight: 500;
+	color: #73879c;
+	margin-bottom: 30px; 
+}
+.get-in-touch .title .btn-info {
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 12px 30px;
+    margin-top: 20px;
+    border-radius: 2px;
+    background: #00bc9c;
+    color: #fff;
+    border: 1px solid #00bc9c;
+    transition: 1s;
+}
+.get-in-touch .title .btn-info:hover, .get-in-touch .title .btn-info:focus{
+	background: transparent !important;
+    color: #00bc9c !important;
+    border: 1px solid #00bc9c !important;
+    outline: 0px;
+    box-shadow: none;
+}
+/*Footer section goes here*/
+.footer-top-section{
+	width: 100%;
+	padding: 70px 0px;
+	background: url(../images/footer-top.png);
+}
+.footer-top-section .widget{
+	width: 100%;
+}
+.footer-top-section .widget h4{
+	font-size: 15px;
+	line-height: 25px;
+	font-weight: 600;
+	text-transform: uppercase;
+	color: #fff;
+	margin-bottom: 15px; 
+}
+.footer-top-section .widget p{
+	font-size: 13px;
+	line-height: 24px;
+	font-weight: 500;
+	color: #8c9aa8;
+	margin: 10px 0px;
+}
+.footer-top-section .widget .link{
+	font-size: 14px;
+	line-height: 24px;
+	font-weight: 700;
+	color: #8c9aa8;
+}
+.footer-top-section .widget .link:hover{
+	text-decoration: none;
+	color: #00bc9c;
+}
+.footer-top-section .widget .link .fa{
+	font-weight: 400;
+	margin-left: 10px;
+}
+.footer-top-section .widget .no-mar{
+	padding-left: 0px;
+	padding-right: 0px;
+}
+.footer-top-section .widget .card-group{
+	margin-bottom: 8px;
+	margin-left: 15px;
+}
+.footer-top-section .widget .card{
+	border: 0px solid rgba(0,0,0,.125);
+    border-radius: 0px;
+    margin-right: 8px;
+}
+.footer-top-section .widget .form .mx-sm-3{
+	width: 100%;
+	margin-left: 0px !important; 
+}
+.footer-top-section .widget .form .form-control {
+    width: 100%;
+    background: #4e5c6c;
+    border: 1px solid #4e5c6c;
+    font-size: 14px;
+    border-radius: 3px;
+    padding: 18px 8px;
+}
+.footer-top-section .widget .form .btn-primary {
+    color: #fff;
+    background-color: #00bc9c;
+    border-color: #00bc9c;
+    position: absolute;
+    right: 7%;
+    bottom: 38%;
+    padding: 6px 10px;
+    font-size: 11px;
+    font-weight: 700;
+}
+.footer-top-section .widget .form .btn-primary:hover, .footer-top-section .widget .form .btn-primary:focus{
+	background: transparent !important;
+    color: #00bc9c !important;
+    border: 1px solid #00bc9c !important;
+    outline: 0px;
+    box-shadow: none !important;
+}
+/*Footer bottom goes here*/
+
+.footer-bottom-section, .footer-bottom-section .bg-light{
+	padding: 20px 0px; 
+	background: url(../images/footer-bottom.png); 
+}
+.footer-bottom-section p{
+	color: #657381;
+    font-size: 15px;
+    font-weight: 500;
+    margin-bottom: 0px;
+    margin-left: 25px;
+}
+.footer-bottom-section .navbar-expand-lg .navbar-nav {
+   margin-left: 62%;
+}
+.footer-bottom-section .navbar-light .navbar-nav .nav-link{
+    color: #657381;
+    font-size: 15px;
+    font-weight: 500;
+    /*margin: 0px 10px 0px 15px;*/
+}
+.footer-bottom-section .navbar-light .navbar-nav .active>.nav-link{
+	color: #506a85;
+	font-weight: 500;
+}
+.footer-bottom-section .navbar-light .navbar-nav .nav-link:focus, .footer-bottom-section .navbar-light .navbar-nav .nav-link:hover {
+    color: #00bc9c;
+}
+.footer-bottom-section a{
+	margin-right: 1%;
+}
